# voxput

./: .gitignore  Cargo.toml  LICENSE  PR_REVIEW.md  README.md  default.nix  flake.nix  implementation.md  package.nix
.github/workflows/: pages.yml
contrib/: com.github.jonochang.Voxput.service  voxputd.service
crates/voxput-cli/: Cargo.toml
crates/voxput-cli/src/: main.rs
crates/voxput-cli/src/cli/: daemon.rs  devices.rs  mod.rs  record.rs
crates/voxput-core/: Cargo.toml
crates/voxput-core/src/: errors.rs  lib.rs  state.rs
crates/voxput-core/src/audio/: cpal_backend.rs  mod.rs  wav.rs
crates/voxput-core/src/config/: mod.rs  schema.rs
crates/voxput-core/src/output/: clipboard.rs  mod.rs  stdout.rs
crates/voxput-core/src/provider/: groq.rs  mod.rs
crates/voxput-core/tests/: groq_integration.rs
crates/voxputd/: Cargo.toml
crates/voxputd/src/: main.rs  service.rs
docs/: book.toml
docs/specs/: background.md  design.md  scenarios.md
docs/src/: SUMMARY.md  architecture.md  installation.md  introduction.md  quickstart.md  troubleshooting.md
docs/src/cli/: README.md  daemon-control.md  devices.md  record.md
docs/src/configuration/: README.md
docs/src/daemon/: README.md  api-key.md  setup.md
docs/src/gnome-extension/: README.md  auto-paste.md  push-to-talk.md  settings.md  toggle-mode.md
docs/src/nixos/: README.md  flake-setup.md  home-manager.md  module-options.md
extensions/gnome/: Makefile
extensions/gnome/voxput@jonochang.github.com/: extension.js  metadata.json  prefs.js  stylesheet.css
extensions/gnome/voxput@jonochang.github.com/schemas/: org.gnome.shell.extensions.voxput.gschema.xml
nix/: gnome-extension.nix  home-manager-module.nix
