[workspace]
resolver = "2"
members = ["crates/voxput-core", "crates/voxput-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Audio
cpal = "0.15"
hound = "3"

# Clipboard
arboard = "3"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal
crossterm = "0.28"

# Config
dirs = "5"

# Dev
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
mockito = "1"
proptest = "1"
