[package]
name = "voxput"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "voxput"
path = "src/main.rs"

[dependencies]
voxput-core = { path = "../voxput-core" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tokio = { workspace = true }
