[package]
name = "voxput-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
arboard = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
mockito = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
