[package]
name = "voxputd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "voxputd"
path = "src/main.rs"

[dependencies]
voxput-core = { path = "../voxput-core" }
zbus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
